2007-11-08  Jeremy Cribb <jcribb@email.unc.edu>
	* pole_locator.m: added. David Bober's code that locates "monopole" position.  Uses the last 40 positions of trackers in a video tracking dataset to compute the intersection of traces, with the ides that that intersection is the location of the "monopole" in 3dfm force calibrations.

2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m: reported vector components rather than the force magnitude.
	* forces2d.m: same.

2006-08-08  Jeremy Cribb <jcribb@email.unc.edu>
	* varforce: added this folder to replace varforcecal.
	* varforcecal:  removed this folder.  shortened the name elsewhere, so it's probably best to do it here too before things get rolling.

2006-08-07  Jeremy Cribb <jcribb@email.unc.edu>
	* forcecal2d.m:  offsets for pole location are now handled at the correct place.  corrected documentation.  
	* interp_forces2d.m:  added better documentation and improved naming of variables.
	
2006-08-02  Jeremy Cribb <jcribb@email.unc.edu>
	* bead_suscept.m: added.  computes bead to bead variability in force and bead susceptibility when a properly described magnet (field gradient) is used to pull beads across the field of view.  uses video data from load_video_tracking.
	* interp_forces2d.m: fixed an off-by-one error.
	
2006-07-31  Jeremy Cribb <jcribb@email.unc.edu>
	* interp_forces2d.m: added.  Interpolates forces in 2d when given 2d forcemap dataset. 
	* plot_forcecal2d.m: added.  Plots a 2D force calibration dataset.
	* forcecal2d.m: 
			- expanded and updated documentation.  
			- changed code so that SI units are used as early as possible (to minimize scaling bugs).
			- removed plotting code and placed into its own function (works for varforcecal too).
			- changed output from multiple variable outputs to a structure with similar fields.
	* forces2d.m: removed dependence on video datatype.  now inputs must be in SI units or scaling errors may occur!

2006-07-20  Jeremy Cribb <jcribb@email.unc.edu>